2008-12-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* home/hd-task-navigator.c: Make it able to scroll again.

2008-12-16  Tuomas Kuosmanen  <tuomas.kuosmanen@nokia.com>

	* data/icons/48x48/back-button.png: fixed for demo
	* data/icons/48x48/qgn_tswitcher_close.png: fixed for demo
	* data/icons/48x48/qgn_tswitcher_back.png: fixed for demo

2008-12-16  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.12

2008-12-15  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Zoom out when jumping to the second level in task launcher.

	* src/home/hd-switcher.c (switcher_mode, hd_switcher_constructed,
	  hd_switcher_launcher_cat_launched, hd_switcher_launcher_cat_hidden,
	  hd_switcher_zoom_in_complete):
	* src/launcher/hd-launcher.c (CAT_LAUNCHED, CAT_HIDDEN,
	  hd_launcher_class_init, hd_launcher_back_button_clicked,
	  hd_launcher_category_tile_clicked): Added new signals for launching
	  subcategory and hiding it.

2008-12-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/launcher/hd-launcher-page.c, src/launcher/hd-launcher.c:
	Task Launcher animation adjustments from 1:2.2.10-1fix tag.
	
	* src/home/hd-home-view.c (hd_home_view_refresh_bg): Remove debug to
	enable speedier scrolling.

2008-12-15  Jan Arne Petersen  <jpetersen@openismus.com>
	
	* src/home/hd-home.c (hd_home_desktop_key_press, hd_home_init): Only
	  open dialpad if a number was pressed. Add code for the addressbook
	  live search.

2008-12-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.11

2008-12-15  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Make main launcher category completely transparent when showing 2nd
	level.

	* src/launcher/hd-launcher.c (hd_launcher_set_top_blur):

2008-12-15  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Hiding the launcher button when zooming in on app is no longer
	necessary. Fixes NB#92583

	* src/home/hd-switcher.c (hd_switcher_item_selected):
