@@ -570,15 +570,28 @@ load_image_fit (char const * fname, guint aw, guint ah)
 }
 
 /* Start playing @fname asynchronously. */
+/* Tell play() now it's free to play. */
+static void
+play_finished (ca_context *ctx, uint32_t id, int error_code, void *is_playing)
+{
+  *(gboolean *)is_playing = FALSE;
+}
+
 static void
 play (const gchar * fname)
 {
     static ca_context *ca;
+    static gboolean is_playing;
     ca_proplist *pl;
     int ret;
 
     /* Canberra uses threads. */
     if (hd_disable_threads())
+      return;
+
+    /* Canberra may not like it to play multiple sounds at a time
+     * with the same context.  This may be totally bogus, though. */
+    if (is_playing)
       return;
 
     /* Initialize the canberra context once. */
@@ -600,9 +613,11 @@ play (const gchar * fname)
 
     ca_proplist_create (&pl);
     ca_proplist_sets (pl, CA_PROP_MEDIA_FILENAME, fname);
-    if ((ret = ca_context_play_full (ca, 0, pl, NULL, NULL)) != CA_SUCCESS)
+    if ((ret = ca_context_play_full (ca, 0, pl, play_finished,
+                                     &is_playing)) != CA_SUCCESS)
       g_warning("%s: %s", fname, ca_strerror (ret));
     ca_proplist_destroy(pl);
+    is_playing = TRUE;
 }
 /* Graphics loading and noise making }}} */
 
